# tether

./: Dockerfile.arm64  Dockerfile.jetpack  README.md  pyproject.toml
.github/workflows/: package-install-smoke.yml
docs/: adding_a_robot.md  cli_reference.md  deploy_proof.md  getting_started.md  policy_versioning.md  record_replay.md  transports.md  verification.md
scripts/: Dockerfile.fluxvla_eval  calibrate_adaptive_chunking.py  local_pi0_prefix_smoke.py  mock_flash_attn.py  modal_flashrt_bench.py  modal_fluxvla_native_eval.py  modal_pi05_predict_action_parity.py  modal_pi0_predict_action_parity.py  modal_verify_bench_all.py  modal_verify_parity_cert.py  patch_fluxvla_setup.py  publish_jetson_latency.py
src/reflex/: __init__.py  cli.py  verify.py
src/reflex/bench/: report.py
src/reflex/exporters/: monolithic.py  pi0_prefix.py  weight_fusion.py
src/reflex/models/heads/: expert_stack.py  flow_matching_head.py
src/reflex/models/vlas/: __init__.py  pi0.py  pi05.py
src/reflex/registry/: models.py
src/reflex/runtime/: hardware_probe.py  model_resolver.py  ort_providers.py  pi05_onnx_server.py  pi0_onnx_server.py  server.py  smolvla_onnx_server.py  tokenizers.py
src/tether/: cli.py  deploy_proof.py  policy_diff.py  realtime_cert.py  realtime_cert_publish.py  release_assurance.py  shadow_rollout.py
src/tether/agent/: __init__.py  client.py  commands.py  config.py  daemon.py  hardware.py  models.py  resources.py
src/tether/chat/: executor.py  loop.py  schema.py  welcome.py
src/tether/finetune/: __init__.py  improve_worker.py
src/tether/mcp/: server.py
src/tether/observability/: __init__.py  prometheus.py
src/tether/runtime/: adaptive_calibration.py  adaptive_chunking.py  buffer.py  pi05_decomposed_server.py  record.py  rtc_adapter.py  server.py  temporal_vla_cache.py
src/tether/runtime/transports/zmq/: client.py  factory.py  policy_server.py  security.py
src/tether/safety/: guard.py
tests/: test_adaptive_calibration.py  test_adaptive_chunking.py  test_agent_cli.py  test_agent_client.py  test_agent_commands.py  test_agent_config.py  test_agent_daemon.py  test_agent_hardware.py  test_bench_methodology.py  test_chat_regression.py  test_cli.py  test_day10_cli_vla_type.py  test_decomposed_server.py  test_deploy_proof.py  test_guard.py  test_improve_worker.py  test_mcp_server.py  test_observability_prometheus.py  test_one_command_deploy.py  test_ort_providers.py  test_pi0_prefix_module_rename.py  test_pi0_vla.py  test_policy_diff.py  test_pyproject_metadata.py  test_realtime_cert.py  test_realtime_cert_publish.py  test_record.py  test_record_policy_versioning.py  test_registry_completeness.py  test_release_assurance.py  test_rtc_adapter_day1.py  test_rtc_adapter_day4.py  test_rtc_adapter_integration.py  test_runtime_num_steps_10.py  test_runtime_tokenizers.py  test_serve_http_roundtrip.py  test_shadow_rollout.py  test_temporal_vla_cache.py  test_verification.py  test_verify.py  (+7 more)
